better ShortcutException message format